-sdsslib compiles & links under linux (not opengl parts and xml parsing) -makefile for dumper (not yet 100% working)

--- a/src/dump/makefile
+++ b/src/dump/makefile
@@ -7,8 +7,8 @@ CC=g++
 CFLAGS       = -fPIC -g -Wall -m64 -D_FILE_OFFSET_BITS=64  -fopenmp
 
 # define linker flags
-# 
-LDFLAGS      = -shared
+# -Wl,-rpath=/mnt/hgfs/vmshare/mpitest
+LDFLAGS      = -L../ -Wl,-rpath=/mnt/hgfs/vmshare/sdss/dump
 
 # define debug flags
 #
@@ -16,19 +16,19 @@ DEBUGFLAGS	 =
 
 # define any directories containing header files other than /usr/include
 # i.e. -I/home/mylib/include  -I../include
-INCLUDES = -I../  -I../3rdparty 
+INCLUDES = -I../  -I../3rdparty/api -I../sdsslib 
 
 
 # define any libraries to link into executable:
 #   e.g. -lmylib -lm will link in libmylib.so and libm.so
-LIBS = 
+LIBS = libsdss.so
 
 
-TARGET  = ../libsdss.so
-EXCLUDES = BigTiff glextensions glFBO glhelper glshaderprogram gltexture FileArchive
-SOURCES = $(filter-out $(addsuffix .cpp,$(EXCLUDES)),$(wildcard *.cpp))
-HEADERS = $(filter-out $(addsuffix .h,$(EXCLUDES))   ,$(wildcard *.h))
-OBJECTS = $(SOURCES:.cpp=.o)
+TARGET  = dump
+SOURCES = $(wildcard *.cpp)
+ASM		= $(wildcard *.S)
+HEADERS = $(wildcard *.h)
+OBJECTS = $(SOURCES:.cpp=.o) $(ASM:.S=.o)
 
 
 all: $(TARGET)
